Updated Simulation.java and config/main.properties
Added some simulation parameters like the number of particles and
min/max muon momentums. Also added a Config object in the Simulation
class to load the parameters at runtime.

--- a/config/main.properties
+++ b/config/main.properties
@@ -1,3 +1,11 @@
+
+numParticles = 1
+minMomentum = 50
+maxMomentum = 150
+
+coincidenceDetectorRadiusA = 90
+coincidenceDetectorRadiusB = 91
+
 coincidence_detector_momentum_highlow_split = 100
 
 mag_field = 1
