Changed CoincidenceDetector to test again range of momentums

--- a/config/main.properties
+++ b/config/main.properties
@@ -6,6 +6,7 @@ maxMomentum = 150
 coincidenceDetectorRadiusA = 90
 coincidenceDetectorRadiusB = 91
 
-coincidence_detector_momentum_highlow_split = 100
+coincidenceMinMomentum = 75
+coincidenceMaxMomentum = 125
 
-mag_field = 1
+magField = 1
