Added new magnetic field implementation
- New FieldLayer to replace VacuumLayer
- New DetectorLayer
- DetectorViewer simplified and takes new data structure
- Modified parts of Simulation and Particle to accommodate new classes

--- a/config.properties
+++ b/config.properties
@@ -9,4 +9,5 @@ coincidenceDetectorRadiusB = 91.0
 coincidenceMinMomentum = 9990
 coincidenceMaxMomentum = 10010
 
-magField = 12.42
+# magField = 12.42
+magField = 0.5
