General code refactoring.

--- a/config.properties
+++ b/config.properties
@@ -1,12 +1,11 @@
+num_particles = 1
 
-numParticles = 1
-minMomentum = 45000
-maxMomentum = 55000
+mag_field = 3
 
-coincidenceDetectorRadiusA = 90.0
-coincidenceDetectorRadiusB = 91.0
+momentum       = 100
+momentum_smear = 0.05
 
-coincidenceMinMomentum = 9990
-coincidenceMaxMomentum = 10010
-
-magField = 3
+cd_radius_a = 90.0
+cd_radius_b = 91.0
+cd_thickness = 0.05
+cd_resolution = 0.0005
