--- a/config.properties
+++ b/config.properties
@@ -1,13 +1,15 @@
-num_particles = 10
+num_particles = 10000
 
 masses = 106
 
-mag_field = 1
+mag_field = 4
 
-momentum       = 20000
+momentum       = 100000
 momentum_smear = 0.75
+
+high_momentum_limit = 300000
 
 cd_radius_a   = 90.0
 cd_radius_b   = 91.0
 cd_thickness  = 0.05
-cd_resolution = 0.0005
+cd_resolution = 0.00005
