Changed the way simulation objects are created wrt config objects

--- a/config.properties
+++ b/config.properties
@@ -6,8 +6,7 @@ mag_field = 4
 
 momentum       = 100000
 momentum_smear = 0.75
-
-high_momentum_limit = 300000
+momentum_limit = 300000
 
 cd_radius_a   = 90.0
 cd_radius_b   = 91.0
