step_count and step_size stored in config file

--- a/config.properties
+++ b/config.properties
@@ -2,13 +2,16 @@ num_particles = 10000
 
 masses = 106
 
-mag_field = 1
+mag_field = 2
 
-momentum       = 100000
+momentum       = 50000
 momentum_smear = 0.75
-momentum_limit = 300000
+momentum_limit = 10000
 
 cd_radius_a   = 90.0
 cd_radius_b   = 91.0
-cd_thickness  = 0.05
-cd_resolution = 0.00005
+cd_thickness  = 0.00005
+cd_resolution = 0.0
+
+step_count = 1
+step_size = 10000
