Made a few simplifications.

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 num_particles = 10000
 
-masses = 106
+particle_mass = 106
 
 mag_field = 2
 
@@ -8,11 +8,11 @@ momentum       = 50000
 momentum_smear = 0.75
 momentum_limit = 10000
 
-cd_radius_a   = 90.0
-cd_radius_b   = 91.0
-cd_thickness  = 0.00005
-cd_resolution = 0.0
+trigger_radius_A   = 90.0
+trigger_radius_B   = 91.0
+trigger_thickness  = 0.00005
+trigger_resolution = 0.0
 
-step_count = 1
+step_count = 2
 step_size = 10000
 sample_size = 3
