--- a/config.properties
+++ b/config.properties
@@ -1,18 +1,19 @@
-num_particles = 10000
+num_particles = 10
 
 particle_mass = 106
 
 mag_field = 2
 
-momentum       = 0
-momentum_smear = 0.5
-momentum_limit = 25000
+momentum       = 30000
+momentum_smear = 0
+momentum_limit = 35000
 
 trigger_radius_A   = 90.0
 trigger_radius_B   = 91.0
 trigger_thickness  = 0.05
-trigger_resolution = 0.00005
+trigger_resolution = 0.00008
 
-step_count = 50
-step_size = 2500
-sample_size = 3
+step_var = momentum
+step_count = 5
+step_size = 1000
+sample_size = 2
