--- a/config.properties
+++ b/config.properties
@@ -1,19 +1,19 @@
-num_particles = 5000
+num_particles = 1000
 
 particle_mass = 106
 
 mag_field = 2
 
 momentum       = 50000
-momentum_smear = 0.5
-momentum_limit = 35000
+momentum_smear = 0.2
+momentum_limit = 50000
 
-trigger_radius_A   = 90.0
-trigger_radius_B   = 91.0
+trigger_radius_A   = 75.0
+trigger_radius_B   = 76.0
 trigger_thickness  = 0.05
-trigger_resolution = 0.00001
+trigger_resolution = 0.0001
 
-step_var = momentum
-step_count = 5
-step_size = 1000
+step_var = position
+step_count = 100
+step_size = 1
 sample_size = 3
