--- a/config.properties
+++ b/config.properties
@@ -1,19 +1,19 @@
-num_particles = 1
+num_particles = 1000
 
 particle_mass = 106
 
 mag_field = 2
 
-momentum       = 400
+momentum       = 0
 momentum_smear = 0
-momentum_limit = 400
+momentum_limit = 10000
 
-trigger_radius_A   = 0.9
+trigger_radius_A   = 0.90
 trigger_radius_B   = 0.91
 trigger_thickness  = 0.0005
 trigger_resolution = 0.00001
 
-step_var = position
-step_count = 100
-step_size = 1
+step_var    = momentum
+step_count  = 100
+step_size   = 1000
 sample_size = 3
